--- a/songm-common-utils/pom.xml
+++ b/songm-common-utils/pom.xml
@@ -58,5 +58,10 @@
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom2</artifactId>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 	</dependencies>
 </project>
