--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,22 @@
 	<artifactId>songm-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	
 	<distributionManagement>
 		<site>
 			<id>website</id>
 			<url>scp://webhost.company.com/www/website</url>
 		</site>
+		<repository>
+		  <id>nexus-releases</id>
+		  <name>Nexus Release Repository</name>
+		  <url>http://192.168.188.177:8081/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+		  <id>nexus-snapshots</id>
+		  <name>Nexus Snapshot Repository</name>
+		  <url>http://192.168.188.177:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
 	</distributionManagement>
 
 	<properties>
@@ -191,6 +202,11 @@
 				<groupId>commons-httpclient</groupId>
 				<artifactId>commons-httpclient</artifactId>
 				<version>3.1</version>
+			</dependency>
+			<dependency>
+			    <groupId>commons-fileupload</groupId>
+			    <artifactId>commons-fileupload</artifactId>
+			    <version>1.3.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.shiro</groupId>
