--- a/songm-common-utils/pom.xml
+++ b/songm-common-utils/pom.xml
@@ -51,6 +51,10 @@
 			<artifactId>commons-httpclient</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 		</dependency>
