--- a/songm-common-service/pom.xml
+++ b/songm-common-service/pom.xml
@@ -17,6 +17,10 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 		
 		<dependency>
             <groupId>com.alibaba</groupId>
