--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,10 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
 	</dependencies>
 
 
