--- a/songm-common-service/pom.xml
+++ b/songm-common-service/pom.xml
@@ -13,14 +13,24 @@
 	<url>http://maven.apache.org</url>
 
 	<dependencies>
+	   <!-- 面向切面编程框架 -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjtools</artifactId>
+        </dependency>
+	
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
-		<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-        </dependency>
 		
 		<dependency>
             <groupId>com.alibaba</groupId>
