--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
 				<artifactId>commons-dbcp2</artifactId>
 				<version>2.1</version>
 			</dependency>
+			<dependency>     
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>1.0.19</version>
+            </dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
