--- a/songm-common-dao/pom.xml
+++ b/songm-common-dao/pom.xml
@@ -73,6 +73,10 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
 
 	</dependencies>
 </project>
