--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
 				<artifactId>servlet-api</artifactId>
 				<version>2.5</version>
 			</dependency>
+			<dependency>
+	            <groupId>javax.servlet</groupId>
+	            <artifactId>jstl</artifactId>
+	            <version>1.2</version>
+	        </dependency>
 
 			<dependency>
 				<groupId>com.sun.mail</groupId>
