--- a/songm-common-web/pom.xml
+++ b/songm-common-web/pom.xml
@@ -27,6 +27,10 @@
 			<artifactId>servlet-api</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
