--- a/songm-common-mq/pom.xml
+++ b/songm-common-mq/pom.xml
@@ -24,7 +24,11 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-all</artifactId>
+            <artifactId>activemq-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
