--- a/songm-common-mq/pom.xml
+++ b/songm-common-mq/pom.xml
@@ -6,9 +6,10 @@
     <parent>
         <groupId>cn.songm.common</groupId>
         <artifactId>songm-common</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <artifactId>songm-common-mq</artifactId>
+    <version>0.1</version>
     <name>${project.artifactId}</name>
     <url>http://maven.apache.org</url>
 
