--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,18 @@
 	            <artifactId>jstl</artifactId>
 	            <version>1.2</version>
 	        </dependency>
+	        
+	        <dependency>
+			    <groupId>com.thetransactioncompany</groupId>
+			    <artifactId>cors-filter</artifactId>
+			    <version>2.6</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>com.thetransactioncompany</groupId>
+			    <artifactId>java-property-utils</artifactId>
+			    <version>1.9.1</version>
+			</dependency>
 
 			<dependency>
 				<groupId>com.sun.mail</groupId>
