--- a/songm-common-web/pom.xml
+++ b/songm-common-web/pom.xml
@@ -27,6 +27,17 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.thetransactioncompany</groupId>
+		    <artifactId>cors-filter</artifactId>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.thetransactioncompany</groupId>
+		    <artifactId>java-property-utils</artifactId>
+		</dependency>
+		
 		<dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
