--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,13 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			
+			<dependency>
+            	<groupId>org.springframework.amqp</groupId>
+            	<artifactId>spring-rabbit</artifactId>
+            	<version>1.4.0.RELEASE</version>
+        	</dependency>
+        	
 		</dependencies>
 	</dependencyManagement>
 
