--- a/songm-common-utils/pom.xml
+++ b/songm-common-utils/pom.xml
@@ -14,6 +14,11 @@
     <url>http://maven.apache.org</url>
 
     <dependencies>
+    	<dependency>
+    		<groupId>com.sun.mail</groupId>
+    		<artifactId>javax.mail</artifactId>
+    	</dependency>
+    	
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
