--- a/songm-common-beans/pom.xml
+++ b/songm-common-beans/pom.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0"?>
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>cn.songm.common</groupId>
-		<artifactId>songm-common</artifactId>
-		<version>1.0</version>
-	</parent>
-	<artifactId>songm-common-beans</artifactId>
-	<version>0.1</version>
-	<name>${project.artifactId}</name>
-	<url>http://maven.apache.org</url>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>cn.songm.common</groupId>
+    <artifactId>songm-common</artifactId>
+    <version>1.0</version>
+  </parent>
+  <artifactId>songm-common-beans</artifactId>
+  <version>0.1</version>
+  <name>${project.artifactId}</name>
+  <url>http://maven.apache.org</url>
 
-	<dependencies>
-		<dependency>
-			<groupId>cn.songm.common</groupId>
-			<artifactId>songm-common-utils</artifactId>
-		</dependency>
-	</dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>cn.songm.common</groupId>
+      <artifactId>songm-common-utils</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>cn.songm.common</groupId>
+      <artifactId>songm-common-redis</artifactId>
+    </dependency>
+  </dependencies>
 </project>
