--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,17 @@
         <version>1.4.0.RELEASE</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+        <version>2.6.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-hadoop</artifactId>
+        <version>2.5.0.RELEASE</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -318,7 +329,6 @@
       <artifactId>spring-test</artifactId>
     </dependency>
   </dependencies>
-
 
   <build>
     <plugins>
@@ -355,7 +365,7 @@
           <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
-      
+
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
@@ -393,7 +403,6 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
-      
     </plugins>
   </build>
 
@@ -405,6 +414,7 @@
     <module>songm-common-service</module>
     <module>songm-common-redis</module>
     <module>songm-common-mq</module>
+    <module>songm-common-hadoop</module>
   </modules>
 
 </project>
